option java_outer_classname = "LCGetNodeInfo";
option java_package = "com.navinfo.opentsp.platform.location.protocol.services.mm";

import "core/proto/common/java/DistrictCode.proto";

message GetNodeInfo{
	required	DistrictCode	districtCode	=1;
}
